# saferoute

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.ps1  run.sh  structure.md  test.py
autopass_gen/: cli.py
autopass_gen/agents/: execution.py  perception.py  policy.py  safety.py  urgency.py
autopass_gen/carla/: adapter.py
autopass_gen/core/: generator.py  io.py  schema.py
autopass_gen/evaluation/: evaluator.py
autopass_gen/sim/: rollout.py
autopass_gen/utils/: plots.py
configs/: example_scenario.json
experiments/logs/: demo_trace.jsonl  saferoute_tm_trace.jsonl
paper/: main.tex  refs.bib
paper/results/: metrics_batch_50_deadline_fix.csv  summary_by_policy.csv
scripts/: run_demo.py  run_demo_rev.py  run_demo_tm.py  run_saferoute_tm.py  run_stress_test.py
slides/: main.tex
src/agents/: critic.py  executor.py  perception.py  planner.py
src/maps/: map_ir.py
src/utils/: metrics.py
tests/: test_core.py
